--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "to deploy, just delete old files in zip and put all new code in zip file, then write this command:\r \r aws lambda update-function-code --function-name smart-office-lex-chatbot-fulfilment-webhook --zip-file fileb://index.zip\r ",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dozip": "@powershell Compress-Archive -Path D:/Farhan/Programming/Owais/CYContactus",
     "delzip": "@powershell del CYContactus.zip",
